css ui fix on small devices

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -222,5 +222,6 @@ p {
   }
   .container {
     margin: 8px auto;
+    min-height: 95vh;
   }
 }
